# time-tracker

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: build.yml
dashboard/: README.md  angular.json  package-lock.json  package.json  tailwind-vite-plugin.mjs
dashboard/src/: styles.css
dashboard/src/app/: app.component.ts  app.routes.ts
dashboard/src/app/pages/about/: about.component.ts
dashboard/src/app/pages/categories/: categories.component.ts
dashboard/src/app/pages/charts/: charts.component.ts
dashboard/src/app/pages/overview/: overview.component.ts
dashboard/src/app/pages/settings/: settings.component.ts
dashboard/src/app/pages/timeline/: timeline.component.ts
dashboard/src/app/services/: api.service.ts  settings.service.ts
dashboard/src/app/shared/: date-input.component.ts
docs/: PLAN.md  SPECIFICATION.md
scripts/: server.sh  test.sh  track.sh
src/timetracker/: __main__.py  config.py
src/timetracker/api/: server.py
src/timetracker/api/routes/: categories.py  config.py  jobs.py  screenshots.py  tracking.py
src/timetracker/api/static/: index.html
src/timetracker/db/: migrations.py  models.py  session.py
src/timetracker/platform/: base.py  factory.py  linux_wayland.py  linux_x11.py  windows.py
src/timetracker/tracking/: categorizer.py  recompute.py  sampler.py
src/timetracker/ui/: tray.py
tests/unit/: test_categorizer.py  test_config.py  test_db.py  test_platform.py  test_sampler.py  test_smoke.py
